[tool.poetry]
name = "jss"
version = "0.1.1"
description = "A set of password security tools made using Python and Click"
authors = ["Josh Tarongoy"]
readme = "README.md"
packages = [{include = "jss"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
jss = "jss._main:main"
